--- a/Abled/app/src/main/res/layout/activity_main.xml
+++ b/Abled/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button_findJob"
                 android:text="내 일자리 찾기"
+                android:layout_marginHorizontal="4dp"
                 android:textSize="24dp"
                 android:padding="24dp"/>
 
@@ -35,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button_community"
                 android:text="일자리 커뮤니티"
+                android:layout_marginHorizontal="4dp"
                 android:textSize="24dp"
                 android:padding="24dp"/>
 
@@ -42,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button_automl"
-                android:text="장애 유형 별 고용 현황 보기"
+                android:text="장애 유형 별 고용현황 보기"
+                android:layout_marginHorizontal="4dp"
                 android:textSize="24dp"
                 android:padding="24dp"/>
 
