--- a/Abled/app/src/main/res/layout/activity_automl.xml
+++ b/Abled/app/src/main/res/layout/activity_automl.xml
@@ -14,25 +14,63 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="center">
+            android:layout_gravity="top">
 
-            <Button
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button_community_ask"
-                android:text="automl page"
-                android:textSize="24dp"
-                android:layout_margin="12dp"
-                android:padding="24dp"/>
+                android:text="추천 직무 Top 3"
+                android:textSize="32dp"
+                android:textStyle="bold"
+                android:layout_marginTop="48dp"
+                android:layout_gravity="center" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_myInfo"
+                android:text="나의 유형 : "
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/image_view"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            app:menu="@menu/menu_bar"/>
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_changeInfo"
+                android:text="유형 변경"
+                android:textSize="20dp"
+                android:padding="16dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="32dp"/>
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:menu="@menu/menu_bar"/>
+        </LinearLayout>
 
     </FrameLayout>
 
