--- a/Abled/app/src/main/res/layout/activity_automl.xml
+++ b/Abled/app/src/main/res/layout/activity_automl.xml
@@ -14,7 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="top">
+            android:layout_gravity="top"
+            android:background="#D9D9D9"
+            android:elevation="4dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -32,22 +34,17 @@
                 android:text="나의 유형 : "
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp"
+                android:layout_marginVertical="20dp"
                 android:layout_gravity="center"/>
         </LinearLayout>
 
-
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/image_view"/>
-        </LinearLayout>
+            android:id="@+id/image_view"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
