--- a/Abled/app/src/main/res/layout/activity_findjob.xml
+++ b/Abled/app/src/main/res/layout/activity_findjob.xml
@@ -5,34 +5,39 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/button_community_ask"
-                android:text="find job page"
-                android:textSize="24dp"
-                android:layout_margin="12dp"
-                android:padding="24dp"/>
-        </LinearLayout>
-
+        <!-- 메뉴 바 -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:menu="@menu/menu_bar"/>
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/menu_bar" />
 
-    </FrameLayout>
+        <!-- 카드뷰 목록 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_below="@+id/text_title"
+            android:layout_above="@+id/bottomNavigationView"/>
+
+        <!-- 추천 일자리 리스트 제목 -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_title"
+            android:text="추천 일자리 리스트"
+            android:textSize="32dp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:padding="32dp"
+            android:layout_alignParentTop="true"/>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
